tests/fixtures/invalid/pow_bool_list_set.py
# Cannot call pow() with Bool, List[int], Set[int]
x = pow(True, [1, 2, 3], {1, 2, 3})
